
Features
------------------
 * The ast_channel_feature_hooks* functions have been added to allow features
   such as DTMF hooks, interval hooks, and bridge event hooks to be made
   available to a channel when the channel is bridged. Previously, these
   features were provided exclusively by the caller of ast_bridge_join()
   outside of "basic" type bridges.

JACK_HOOK
------------------
 * The JACK_HOOK function now supports audio with a sample rate higher than
   8kHz.

MusicOnHold
------------------
 * The SetMusicOnHold dialplan application was deprecated and has been removed.
   Users of the application should use the CHANNEL function's musicclass
   setting instead.

 * The WaitMusicOnHold dialplan application was deprecated and has been
   removed. Users of the application should use MusicOnHold with a duration
   parameter instead.

Say
------------------
 * The 'say' family of dialplan applications now support the Japanese
   language. The 'language' parameter in say.conf now recognizes a setting of
   'ja', which will enable Japanese language specific mechanisms for playing
   back numbers, dates, and other items.

VoiceMail
------------------
 * VoiceMail and VoiceMailMain now support the Japanese language. The
   'language' parameter in voicemail.conf now recognizes a setting of 'ja',
   which will enable prompts to be played back using a Japanese grammatical
   structure. Additional prompts are necessary for this functionality,
   including:
   - jb-arimasu: there is
   - jb-arimasen: there is not
   - jb-oshitekudasai: please press
   - jb-ni: article ni
   - jb-ga: article ga
   - jb-wa: article wa
   - jb-wo: article wo

res_config_pgsql
------------------
 * Added the ability to support PostgreSQL application_name on connections.
   This allows PostgreSQL to display the configured name in the
   pg_stat_activity view and CSV log entries. This setting is configurable
   for res_config_pgsql via the dbappname configuration setting in